2008-09-16  Neil Roberts  <neil@linux.intel.com>

	Bug 1100 - WM_SIZE not handled correctly, user_resize and
	window_style correction.

	* clutter/win32/clutter-stage-win32.c (get_window_style): Remove
	the WS_MAXIMIZEBOX style if the stage isn't resizable.
	(clutter_stage_win32_set_user_resize): Queue a redraw of the
	window frame when the user_resize property is changed.

	* clutter/win32/clutter-event-win32.c (message_translate): Don't
	update the size of the stage when handling WM_SIZE messages that
	result from the stage being minimized. Thanks to Roman Yazmin.

2008-09-16  Tomas Frydrych  <tf@linux.intel.com>

	* clutter/glx/clutter-glx-texture-pixmap.c:
	* clutter/x11/clutter-x11-texture-pixmap.c:
	TFP resyncing on MapNotify/ConfigureNotify (bug  1020; patch by
	Andy Wingo <wingo@pobox.com>).
	
2008-09-15  Øyvind Kolås  <pippin@linux.intel.com>

	* clutter/clutter-main.c: amended typo in gtk-doc.

2008-09-12  Neil Roberts  <neil@linux.intel.com>

	Bug 1034 - Picking doesn't work on Eee PC

	* clutter/clutter-main.c (_clutter_id_to_color): When choosing a
	pick color, set all but the most significant of the unused
	bits. This should make make it more likely that the GL
	implementation will round down to the right value.

	* tests/test-pick.c: Test case for picking. It creates 192 actors
	at known positions and stores their gids. It then calls
	clutter_stage_get_actor_at_pos with each position to check that
	the right gid is returned.

	* tests/Makefile.am (noinst_PROGRAMS): Add test-pick

2008-09-12  Neil Roberts  <neil@linux.intel.com>

	Bug 1010 - ClutterLabel does not update the layout (again)

	* clutter/clutter-label.c: Bring back layout caching. This time it
	will cache up to three different layouts. The width for which each
	layout was generated is stored so that if the same width is
	requested again it can use the cached version. If no cached
	version is available it will try to replace the oldest